[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/ARVROrigin.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/InteractionSelection.gd" type="Script" id=2]
[ext_resource path="res://scenes/Interactables.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://scenes/OutputNode.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=8]

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("OutputNode/Viewport")

[sub_resource type="SphereShape" id=35]

[sub_resource type="SphereMesh" id=36]

[sub_resource type="SpatialMaterial" id=37]

[sub_resource type="ViewportTexture" id=44]
viewport_path = NodePath("InteractionSelection/Interaction1/Spatial/Viewport")

[sub_resource type="SphereShape" id=38]

[sub_resource type="SphereMesh" id=39]

[sub_resource type="SpatialMaterial" id=40]

[sub_resource type="ViewportTexture" id=45]
viewport_path = NodePath("InteractionSelection/Interaction2/Spatial/Viewport")

[sub_resource type="SphereShape" id=41]

[sub_resource type="SphereMesh" id=42]

[sub_resource type="SpatialMaterial" id=43]

[sub_resource type="ViewportTexture" id=46]
viewport_path = NodePath("InteractionSelection/Interaction3/Spatial/Viewport")

[sub_resource type="SphereShape" id=47]

[sub_resource type="SphereMesh" id=48]

[sub_resource type="SpatialMaterial" id=49]

[sub_resource type="ViewportTexture" id=50]
viewport_path = NodePath("InteractionSelection/Reset/Spatial/Viewport")

[sub_resource type="CubeMesh" id=51]
size = Vector3( 1, 0.008, 1 )

[sub_resource type="BoxShape" id=52]
extents = Vector3( 0.5, 0.1, 0.5 )

[sub_resource type="CubeMesh" id=53]
size = Vector3( 1, 0.02, 0.008 )

[sub_resource type="BoxShape" id=54]
extents = Vector3( 0.5, 0.01, 0.004 )

[node name="Main" type="Spatial"]
script = ExtResource( 6 )

[node name="ARVROrigin" parent="." instance=ExtResource( 1 )]

[node name="Skeleton" parent="ARVROrigin/RightHand/HandContainer/HandModel/Armature" index="0"]
bones/0/bound_children = [  ]
bones/2/bound_children = [  ]
bones/3/bound_children = [  ]
bones/4/bound_children = [  ]
bones/5/bound_children = [  ]
bones/9/bound_children = [  ]
bones/10/bound_children = [  ]
bones/13/bound_children = [  ]
bones/17/bound_children = [  ]
bones/22/bound_children = [  ]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.932251, -0.159972, 0.324527, -0.298522, -0.846881, 0.440088, 0.204434, -0.507151, -0.83726, 1.5186, 124.325, -240.98 )
shadow_enabled = true

[node name="OutputNode" parent="." instance=ExtResource( 7 )]

[node name="Sprite3D" parent="OutputNode" index="1"]
texture = SubResource( 10 )

[node name="Floor" parent="." instance=ExtResource( 8 )]

[node name="InteractionSelection" type="Spatial" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.555459, 1.26628, 0.544826 )
script = ExtResource( 2 )

[node name="Interaction1" type="Spatial" parent="InteractionSelection"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )

[node name="Area" type="Area" parent="InteractionSelection/Interaction1"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractionSelection/Interaction1/Area"]
shape = SubResource( 35 )

[node name="MeshInstance" type="MeshInstance" parent="InteractionSelection/Interaction1/Area"]
mesh = SubResource( 36 )
material/0 = SubResource( 37 )

[node name="MeshInstance" type="MeshInstance" parent="InteractionSelection/Interaction1"]

[node name="Spatial" type="Spatial" parent="InteractionSelection/Interaction1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10679, 0, 0 )

[node name="Viewport" type="Viewport" parent="InteractionSelection/Interaction1/Spatial"]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="InteractionSelection/Interaction1/Spatial/Viewport"]
margin_right = 100.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interaction 1"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="InteractionSelection/Interaction1/Spatial"]
transform = Transform( -6.55671e-08, 0, -1, 0, 1.5, 0, 1.5, 0, -4.37114e-08, 0.100307, 0, 0 )
texture = SubResource( 44 )

[node name="Interaction2" type="Spatial" parent="InteractionSelection"]

[node name="Area" type="Area" parent="InteractionSelection/Interaction2"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractionSelection/Interaction2/Area"]
shape = SubResource( 38 )

[node name="MeshInstance" type="MeshInstance" parent="InteractionSelection/Interaction2/Area"]
mesh = SubResource( 39 )
material/0 = SubResource( 40 )

[node name="Spatial" type="Spatial" parent="InteractionSelection/Interaction2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10679, 0, 0 )

[node name="Viewport" type="Viewport" parent="InteractionSelection/Interaction2/Spatial"]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="InteractionSelection/Interaction2/Spatial/Viewport"]
margin_right = 100.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interaction 2"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="InteractionSelection/Interaction2/Spatial"]
transform = Transform( -6.55671e-08, 0, -1, 0, 1.5, 0, 1.5, 0, -4.37114e-08, 0.100307, 0, 0 )
texture = SubResource( 45 )

[node name="Interaction3" type="Spatial" parent="InteractionSelection"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="Area" type="Area" parent="InteractionSelection/Interaction3"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractionSelection/Interaction3/Area"]
shape = SubResource( 41 )

[node name="MeshInstance" type="MeshInstance" parent="InteractionSelection/Interaction3/Area"]
mesh = SubResource( 42 )
material/0 = SubResource( 43 )

[node name="Spatial" type="Spatial" parent="InteractionSelection/Interaction3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10679, 0, 0 )

[node name="Viewport" type="Viewport" parent="InteractionSelection/Interaction3/Spatial"]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="InteractionSelection/Interaction3/Spatial/Viewport"]
margin_right = 100.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interaction 3"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="InteractionSelection/Interaction3/Spatial"]
transform = Transform( -6.55671e-08, 0, -1, 0, 1.5, 0, 1.5, 0, -4.37114e-08, 0.100307, 0, 0 )
texture = SubResource( 46 )

[node name="Reset" type="Spatial" parent="InteractionSelection"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )

[node name="Area" type="Area" parent="InteractionSelection/Reset"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractionSelection/Reset/Area"]
shape = SubResource( 47 )

[node name="MeshInstance" type="MeshInstance" parent="InteractionSelection/Reset/Area"]
mesh = SubResource( 48 )
material/0 = SubResource( 49 )

[node name="Spatial" type="Spatial" parent="InteractionSelection/Reset"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10679, 0, 0 )

[node name="Viewport" type="Viewport" parent="InteractionSelection/Reset/Spatial"]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="InteractionSelection/Reset/Spatial/Viewport"]
margin_right = 100.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Add
Blocks"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="InteractionSelection/Reset/Spatial"]
transform = Transform( -6.55671e-08, 0, -1, 0, 1.5, 0, 1.5, 0, -4.37114e-08, 0.100307, 0, 0 )
texture = SubResource( 50 )

[node name="InteractablesContainer" type="Spatial" parent="."]

[node name="Interactables" parent="InteractablesContainer" instance=ExtResource( 3 )]

[node name="Table" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -0.5 )

[node name="MeshInstance" type="MeshInstance" parent="Table"]
mesh = SubResource( 51 )
skeleton = NodePath("Bottom")
material/0 = null

[node name="Bottom" type="StaticBody" parent="Table/MeshInstance"]
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="Table/MeshInstance/Bottom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0958295, 0 )
shape = SubResource( 52 )

[node name="Side1" type="MeshInstance" parent="Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014, 0.496 )
mesh = SubResource( 53 )
skeleton = NodePath("../MeshInstance/Bottom")
material/0 = null

[node name="Bottom" type="StaticBody" parent="Table/Side1"]
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="Table/Side1/Bottom"]
shape = SubResource( 54 )

[node name="Side2" type="MeshInstance" parent="Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014, -0.496 )
mesh = SubResource( 53 )
skeleton = NodePath("../MeshInstance/Bottom")
material/0 = null

[node name="Bottom" type="StaticBody" parent="Table/Side2"]
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="Table/Side2/Bottom"]
shape = SubResource( 54 )

[node name="Side3" type="MeshInstance" parent="Table"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.496, 0.0140001, 0 )
mesh = SubResource( 53 )
skeleton = NodePath("../MeshInstance/Bottom")
material/0 = null

[node name="Bottom" type="StaticBody" parent="Table/Side3"]
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="Table/Side3/Bottom"]
shape = SubResource( 54 )

[node name="Side4" type="MeshInstance" parent="Table"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.496, 0.0140001, 2.98023e-08 )
mesh = SubResource( 53 )
skeleton = NodePath("../MeshInstance/Bottom")
material/0 = null

[node name="Bottom" type="StaticBody" parent="Table/Side4"]
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="Table/Side4/Bottom"]
shape = SubResource( 54 )

[connection signal="area_entered" from="InteractionSelection/Interaction1/Area" to="InteractionSelection" method="_on_interaction1_area_entered"]
[connection signal="area_entered" from="InteractionSelection/Interaction2/Area" to="InteractionSelection" method="_on_interaction2_area_entered"]
[connection signal="area_entered" from="InteractionSelection/Interaction3/Area" to="InteractionSelection" method="_on_interaction3_area_entered"]
[connection signal="area_entered" from="InteractionSelection/Reset/Area" to="." method="_on_reset_area_entered"]
[connection signal="area_exited" from="InteractionSelection/Reset/Area" to="." method="_on_reset_area_exited"]

[editable path="ARVROrigin"]
[editable path="ARVROrigin/LeftHand"]
[editable path="ARVROrigin/RightHand"]
[editable path="OutputNode"]
[editable path="Floor"]
